--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,12 @@ plugins {
 group = 'io.github.hee9841.excel'
 version = '1.0-SNAPSHOT'
 
+java {
+    sourceCompatibility = '1.8'
+    targetCompatibility = '1.8'
+}
+
+
 repositories {
     mavenCentral()
 }
