--- a/build.gradle
+++ b/build.gradle
@@ -5,10 +5,15 @@ plugins {
 group = 'io.github.hee9841.excel'
 version = '1.0-SNAPSHOT'
 
+java {
+    sourceCompatibility = '1.8'
+    targetCompatibility = '1.8'
+}
+
+
 repositories {
     mavenCentral()
 }
-
 dependencies {
     //poi
     implementation 'org.apache.poi:poi:5.4.0'
@@ -16,11 +21,12 @@ dependencies {
 
     //logging
     compileOnly 'org.slf4j:slf4j-api:2.0.17'
+    testImplementation 'ch.qos.logback:logback-classic:1.3.15'  //for java 8
 
     testImplementation platform('org.junit:junit-bom:5.10.0')
-    testImplementation 'org.junit.jupiter:junit-jupiter'
-    testImplementation 'ch.qos.logback:logback-classic:1.5.17'
+    testImplementation 'org.junit.jupiter:junit-jupiter:'
 }
+
 
 test {
     useJUnitPlatform()
