--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,11 @@ dependencies {
     compileOnly 'org.slf4j:slf4j-api:2.0.17'
     testImplementation 'ch.qos.logback:logback-classic:1.3.15'  //for java 8
 
+
+    //for annotation processor
+    implementation 'com.google.auto.service:auto-service:1.1.1'
+
+
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter:'
 
