--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -11,29 +11,27 @@ jobs:
       - uses: actions/checkout@v3
       - name: Extract version information
         run: |
-          echo "$(echo '${{ github.event.head_commit.message }}' | grep -oE 'Release [0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}' | sed 's/Release //')"
-          VERSION=$(echo '${{ github.event.head_commit.message }}' | grep -oE 'Release [0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}' | sed 's/Release //')
-          echo "VERSION=$VERSION" >> $GITHUB_ENV
-        if: "contains(github.event.head_commit.message, 'Release')"
+          VERSION=$(echo "${{ github.event.head_commit.message }}" | grep -oE 'Release [0-9]+\.[0-9]+\.[0-9]+' | sed 's/Release //')
+          if [[ -n "$VERSION" ]]; then
+            echo "VERSION=$VERSION" >> $GITHUB_ENV
+          fi
 
       - name: Set up JDK 11
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4
         with:
           java-version: '11'
           distribution: 'temurin'
+          cache: 'gradle'
           
-      - name: Validate Gradle wrapper
-        uses: gradle/wrapper-validation-action@v1
-      
-      - name: Setup Gradle
-        uses: gradle/gradle-build-action@v2
+      - name: Set up Gradle
+        uses: gradle/actions/setup-gradle@v3
         
-      - name: Run tests
-        run: ./gradlew test
+      - name: Test with Gradle
+        run: ./gradlew test --stacktrace --parallel
         
       - name: Publish to Maven Central
-        if: env.VERSION
-        run: ./gradlew publishAllPublicationsToMavenCentral --no-daemon
+        if: env.VERSION != ''
+        run: ./gradlew clean publish --no-daemon
         env:
           ORG_GRADLE_PROJECT_mavenCentralUsername: ${{ secrets.USER_NAME }}
           ORG_GRADLE_PROJECT_mavenCentralPassword: ${{ secrets.PASSWORD }}
@@ -42,7 +40,7 @@ jobs:
           ORG_GRADLE_PROJECT_signingInMemoryKey: ${{ secrets.GPG_PRIVATE_KEY }}
 
       - name: Create GitHub Release
-        if: env.VERSION
+        if: env.VERSION != ''
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
