Fix: 배포 스크립트 수정(Permission denied Error 수정)

--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -25,7 +25,10 @@ jobs:
           
       - name: Set up Gradle
         uses: gradle/actions/setup-gradle@v3
-        
+
+      - name: Grant execute permission for Gradle Wrapper
+        run: chmod +x ./gradlew
+
       - name: Test with Gradle
         run: ./gradlew test --stacktrace --parallel
         
