--- a/build.gradle
+++ b/build.gradle
@@ -58,6 +58,11 @@ javadoc {
 
 
 signing {
+    useInMemoryPgpKeys(
+            System.getenv("ORG_GRADLE_PROJECT_signingInMemoryKey"),
+            System.getenv("ORG_GRADLE_PROJECT_signingInMemoryKeyPassword"),
+            System.getenv("ORG_GRADLE_PROJECT_signingInMemoryKeyId")
+    )
     sign publishing.publications
 }
 
