--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,8 @@ plugins {
     id 'java'
     id "com.vanniktech.maven.publish" version "0.28.0"
     id 'signing'
+    id 'jacoco' // JaCoCo
+    id 'com.github.kt3k.coveralls' version '2.12.0' // Coveralls
 }
 
 group = 'io.github.hee9841.excel'
@@ -16,7 +18,6 @@ compileJava {
     sourceCompatibility = "1.8"
     targetCompatibility = "1.8"
 }
-
 
 
 repositories {
@@ -101,3 +102,19 @@ mavenPublishing {
         }
     }
 }
+
+jacoco {
+    toolVersion = "0.8.12"
+}
+
+tasks.jacocoTestReport {
+    reports {
+        xml.required.set(true)  // Coveralls needs XML report
+        html.required.set(true) // HTML report
+    }
+}
+
+tasks.coveralls {
+    dependsOn tasks.jacocoTestReport // 테스트 리포트가 먼저 실행되도록 설정
+}
+
