Deploy: 베포시 readme 버전 설정

--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -53,8 +53,7 @@ jobs:
           release_name: v${{ env.VERSION }}
           draft: true
 
-
-#      - name: Update version in README
-#        run: |
-#          VERSION=$(./gradlew properties | grep "version:" | awk '{print $2}')
-#          echo "Released version $VERSION"
+      - name: Update version in README
+        if: env.VERSION != ''
+        run: |
+          echo "Released version ${{ env.VERSION }}"
