--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -4,7 +4,6 @@ on:
   push:
     branches:
       - master
-      - dev
 jobs:
   publish:
     runs-on: ubuntu-latest
@@ -53,8 +52,7 @@ jobs:
           release_name: v${{ env.VERSION }}
           draft: true
 
-
-#      - name: Update version in README
-#        run: |
-#          VERSION=$(./gradlew properties | grep "version:" | awk '{print $2}')
-#          echo "Released version $VERSION"
+      - name: Update version in README
+        if: env.VERSION != ''
+        run: |
+          echo "Released version ${{ env.VERSION }}"
