--- a/build.gradle
+++ b/build.gradle
@@ -42,9 +42,8 @@ dependencies {
     implementation 'org.apache.poi:poi-ooxml:5.4.0'
 
     //logging
-    compileOnly 'org.slf4j:slf4j-api:2.0.17'
-    testImplementation 'ch.qos.logback:logback-classic:1.3.15'  //for java 8
-
+    implementation 'org.slf4j:slf4j-api:2.0.17'
+    testImplementation 'ch.qos.logback:logback-classic:1.3.15'
 
     //for annotation processor
     implementation 'com.google.auto.service:auto-service:1.1.1'
