--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Set up JDK 11
         uses: actions/setup-java@v4
         with:
-          java-version: '11'
+          java-version: '23'
           distribution: 'temurin'
           cache: 'gradle'
           
@@ -52,8 +52,7 @@ jobs:
           release_name: v${{ env.VERSION }}
           draft: true
 
-
-#      - name: Update version in README
-#        run: |
-#          VERSION=$(./gradlew properties | grep "version:" | awk '{print $2}')
-#          echo "Released version $VERSION"
+      - name: Update version in README
+        if: env.VERSION != ''
+        run: |
+          echo "Released version ${{ env.VERSION }}"
