--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -11,7 +11,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: Extract version information
         run: |
-          VERSION=$(echo "${{ github.event.head_commit.message }}" | grep -oE 'Release [0-9]+\.[0-9]+\.[0-9]+( \(#[0-9]+\))?' | sed -E 's/Release ([0-9]+\.[0-9]+\.[0-9]+).*/\1/')
+          VERSION=$(echo "${{ github.event.head_commit.message }}" | grep -oE 'Release [0-9]+\.[0-9]+\.[0-9]+' | sed 's/Release //')
           if [[ -n "$VERSION" ]]; then
             echo "VERSION=$VERSION" >> $GITHUB_ENV
           fi
